# gdelt-vector-stream

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  gdelt-ingest.yml
api/: server.py
data/: sample_gdelt_events.csv
src/gdelt_vector_stream/: __init__.py  analyst.py  country_report.py  downloader.py  embedder.py  fetcher.py  ingestor.py  main.py  query.py  trends.py
tests/: test_country_report.py  test_downloader.py  test_pipeline.py  test_trends.py
ui/: index.html  package-lock.json
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: AskTab.tsx  EventCard.tsx  Header.tsx  SearchTab.tsx
